--- a/src/org/garden/chart/impl/echart/axis.vm
+++ b/src/org/garden/chart/impl/echart/axis.vm
@@ -4,20 +4,8 @@
         text: '$!{chart.title.text}',
         subtext: '$!{chart.title.subtext}'
     },
-     tooltip : {
-        trigger: 'axis',
-        formatter: function (params) {
-            var res = params[0].seriesName + ' ' + params[0].name;
-            res += '<br/>  开盘 : ' + params[0].value[0] + '  最高 : ' + params[0].value[3];
-            res += '<br/>  收盘 : ' + params[0].value[1] + '  最低 : ' + params[0].value[2];
-            return res;
-        }
-    },
-    dataZoom : {
-        show : true,
-        realtime: true,
-        start : 0,
-        end : 50
+    tooltip : {
+        trigger: 'axis'
     },
     legend: {
         data:[
@@ -30,9 +18,6 @@
     	#foreach($axis in $chart.xAxis.axis)
         {
             type : '$!{axis.type}',
-            boundaryGap : true,
-            axisTick: {onGap:false},
-            splitLine: {show:false},
             data : [
             #foreach($data in $axis.data)
 			'$!{data}'#if( $foreach.hasNext ),#end
@@ -44,9 +29,7 @@
     yAxis : [
     	#foreach($axis in $chart.yAxis.axis)
         {
-            type : '$!{axis.type}',
-            scale:true,
-            boundaryGap: [0.01, 0.01]
+            type : '$!{axis.type}'
         }#if( $foreach.hasNext ),#end
         #end
     ],
@@ -55,13 +38,10 @@
         {
             name:'$!{series.name}',
             type:'$!{series.type}',
+            stack: '$!{series.stack}',
             data:[
             #foreach($data in $series.data)
-            	[
-            	#foreach($d in $data.seriesData)
-            		'$!{d.value}'#if( $foreach.hasNext ),#end
-            	#end
-            	]#if( $foreach.hasNext ),#end
+            '$!{data.value}'#if( $foreach.hasNext ),#end
             #end
 			]
         }#if( $foreach.hasNext ),#end
