--- a/src/org/garden/chart/impl/echart/area.vm
+++ b/src/org/garden/chart/impl/echart/area.vm
@@ -26,7 +26,7 @@
     	#foreach($axis in $chart.xAxis.axis)
         {
             type : '$!{axis.type}',
-            boundaryGap : true,
+            boundaryGap : false,
             data : [
             #foreach($data in $axis.data)
 			'$!{data}'#if( $foreach.hasNext ),#end
@@ -38,7 +38,8 @@
     yAxis : [
     	#foreach($axis in $chart.yAxis.axis)
         {
-            type : '$!{axis.type}'
+            type : '$!{axis.type}',
+            logLabelBase:10
         }#if( $foreach.hasNext ),#end
         #end
     ],
@@ -47,7 +48,7 @@
         {
             name:'$!{series.name}',
             type:'$!{series.type}',
-            stack: '$!{series.stack}',
+            smooth:true,
             #if( $series.yAxisIndex)yAxisIndex:${series.yAxisIndex},#end
             itemStyle: {normal: {areaStyle: {type: 'default'}}},
             data:[
